# virus

./: .gitignore  .gitmodules  CMakeLists.txt  OCTREE_IMPLEMENTATION.md  README.md  TDSE2D_REFERENCE.md  WEB_BUILD.md  add_cn_cpu.py  imgui.ini  patch_compute.py  patch_fast_tools.py  patch_fix.py  patch_gltf_textures.py  patch_recount.py  patch_tools.py  patch_wgsl.py  patch_wgsl_res.py  tdse2d_ground_truth_generator.py  tdse2d_sequence_generator.py  tdse_ground_truth_generator.py  train_fno3d_tdse.py  train_tdse2d_delta_rollout.py  train_tdse2d_unet.py  visualize_tdse2d_delta_rollout.py  visualize_tdse2d_model_panel.py  visualize_tdse2d_rollout.py
example/: audio.cpp  audio.h  brickmap.h  camera.cpp  constants.h  context.cpp  context.h  entity.cpp  entity.h  gltfloader.h  input.cpp  itexturemanager.h  main.cpp  model.h  objloader.h  player.cpp  player.h  quad.h  selection.h  slater_vmc.h  terrain.cpp  terrain.h  voxelizer.h
example/compute/: brick_pool.cpp  brick_pool.h  color_palette.cpp  color_palette.h  concurrent_buffers.cpp  concurrent_buffers.h  mesh_voxelizer.cpp  mesh_voxelizer.h  terrain_gen.new  terrain_generator.cpp  terrain_generator.h  texture_manager.cpp  texture_manager.h  voxel_physics.cpp  voxel_physics.h  voxel_renderer.cpp  voxel_renderer.h  voxel_volume.cpp  voxel_volume.h
example/radiance/: buffer_a.txt  buffer_b.txt  buffer_c.txt  common.txt  cube_a.txt  image.txt
res/: atoms_sphere.wgsl  audio_trace.wgsl  circle_2d.wgsl  compute.wgsl  quad.wgsl  sector_occupancy.wgsl  tdse2d.wgsl  tdse3d.wgsl  tdse3d_compute.wgsl  viral_compare.wgsl  voxel_edits.wgsl
src/: renderpass.h  surface.cpp
